--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <div id="settings">
             <div>
                 <label for="brightness">Brightness</label>
-                <input type="range" id="brightness" class="range-setup" name="brightness">
+                <input type="range" id="brightness" class="range-setup" name="brightness" min="-255" max="255" step="1">
             </div>
             <div>
                 <label for="contrast">Contrast</label>
-                <input type="range" id="contrast" class="range-setup" name="contrast">
+                <input type="range" id="contrast" class="range-setup" name="contrast" min="-128" max="128" step="1">
             </div>
             <div>
                 <label for="transparent">Transparent</label>
-                <input type="range" id="transparent" class="range-setup" name="transparent">
+                <input type="range" id="transparent" class="range-setup" name="transparent" min="0" max="1" value="1" step="0.1">
             </div>
         </div>
         <button type="button" id="save-button" class="menu-button" name="save-button">SAVE IMAGE</button>
